# parcertg

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  collector.py  config.py  database.py  dedup.py  ingestion.py  main.py  models.py  notifier.py  scoring.py  telegram_web.py  telegram_web_v2.py  tgstat.py  web.py
config/: lead_query.tgstat  sources.txt  telemetr_keywords.txt  telemetr_minus_words.txt
docs/: AUTODEPLOY.md  COST_FIRST_ROLLOUT.md  TELEGRAM_WEB_SETUP.md  TELEMETR_SETUP.md  TGSTAT_SETUP.md
scripts/: deploy.sh  generate_session.py  telegram_web_debug.py  telegram_web_login.py  tgstat_setup.py
tests/: test_config.py  test_dedup.py  test_ingestion.py  test_scoring.py  test_telegram_web.py  test_telegram_web_v2.py  test_tgstat.py
