[project]
name = "parcertg"
version = "0.2.0"
description = "Cost-first Telegram lead hunter with manual, TGStat and Telethon providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram==3.30.0",
  "telethon==1.44.0",
  "sqlalchemy[asyncio]==2.0.41",
  "asyncpg==0.30.0",
  "aiosqlite==0.21.0",
  "pydantic-settings==2.10.1",
  "structlog==25.4.0",
  "fastapi==0.139.2",
  "uvicorn==0.51.0",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.5",
]

[project.scripts]
parcertg = "app.main:run"
parcertg-session = "scripts.generate_session:main"
parcertg-tgstat = "scripts.tgstat_setup:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
